footer alignment issue

--- a/styles/style.css
+++ b/styles/style.css
@@ -620,12 +620,14 @@ li.footer-social {
 }
 
 ul.footer-info {
+	    width: 45%;
 		margin-top: 10px;
     float: right;
     margin: .1em .1em .1em;
 }
 
 p.footer-text {
+	width: 50%;
 	display: inline-block;
 	font-size: 1em;
 	margin-top: .5em;
